test file change

--- a/test.html
+++ b/test.html
@@ -21,5 +21,6 @@ Hello world
     <section id="search-results" class="search"></section>
 </form>
 <script src="assets/js/add.js"></script>
+welcome
 </body>
 </html>
