--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div class="card-text">
 									Help you to choose which OAuth2 grant type to use..
 								</div>
-								<a class="card-link-mask" href="docs-page.html#grant-type"></a>
+								<a class="card-link-mask" href="grant-types.html#grant-type"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -85,7 +85,7 @@
 							    <div class="card-text">
 								    Machine-to-machine request for token. Produces a access token for a service to access another service/api.
 							    </div>
-							    <a class="card-link-mask" href="docs-page.html#gr-ty-client_creds"></a>
+							    <a class="card-link-mask" href="grant-types.html#gr-ty-client_creds"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -101,7 +101,7 @@
 								<div class="card-text">
 									Machine-to-machine request for token. Produces a access and id token for the user without user authenticating through Dispatcher.
 								</div>
-								<a class="card-link-mask" href="docs-page.html#gr-ty-trusted-app"></a>
+								<a class="card-link-mask" href="grant-types.html#gr-ty-trusted-app"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -117,7 +117,7 @@
 								<div class="card-text">
 									Grant type is used by confidential and public clients to exchange an authorization code for an access token.
 								</div>
-								<a class="card-link-mask" href="docs-page.html#gr-ty-auth-code"></a>
+								<a class="card-link-mask" href="grant-types.html#gr-ty-auth-code"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -133,7 +133,7 @@
 								<div class="card-text">
 									Authorization Code grant flow for Mobile and Single-Page-Applications
 								</div>
-								<a class="card-link-mask" href="docs-page.html#gr-ty-pkce"></a>
+								<a class="card-link-mask" href="grant-types.html#gr-ty-pkce"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -149,7 +149,7 @@
 							    <div class="card-text">
 								    How to register an API
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-3"></a>
+							    <a class="card-link-mask" href="grant-types.html#section-3"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -165,7 +165,7 @@
 							    <div class="card-text">
 								    How to register a client.
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-4"></a>
+							    <a class="card-link-mask" href="grant-types.html#section-4"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -181,7 +181,7 @@
 								<div class="card-text">
 									How to register an external client.
 								</div>
-								<a class="card-link-mask" href="docs-page.html#section-4"></a>
+								<a class="card-link-mask" href="grant-types.html#section-4"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -197,7 +197,7 @@
 							    <div class="card-text">
 								    Token Verification
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-5"></a>
+							    <a class="card-link-mask" href="grant-types.html#section-5"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -213,7 +213,7 @@
 							    <div class="card-text">
 								    How to introspect your token
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-6"></a>
+							    <a class="card-link-mask" href="grant-types.html#section-6"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -229,7 +229,7 @@
 								<div class="card-text">
 									Branding
 								</div>
-								<a class="card-link-mask" href="docs-page.html#section-6"></a>
+								<a class="card-link-mask" href="grant-types.html#section-6"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -245,7 +245,7 @@
 								<div class="card-text">
 									Logout
 								</div>
-								<a class="card-link-mask" href="docs-page.html#section-6"></a>
+								<a class="card-link-mask" href="grant-types.html#section-6"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -261,7 +261,7 @@
 							    <div class="card-text">
 								    RFC
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-8"></a>
+							    <a class="card-link-mask" href="grant-types.html#section-8"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -277,7 +277,7 @@
 							    <div class="card-text">
 								    Frequently asked question
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-9"></a>
+							    <a class="card-link-mask" href="grant-types.html#section-9"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
