--- a/token-docs.html
+++ b/token-docs.html
@@ -74,9 +74,9 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-trusted-app">Trusted Application</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-auth-code">Authorization Code</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-pkce">PKCE</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-auth-code">Refresh Token</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-auth-code">Introspection</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-auth-code">Revocation</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#tk-refresh">Refresh Token</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#tk-introspection">Introspection</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#tk-revoke">Revocation</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#gr-ty-auth-code">External clients</a></li>
 					<li class="nav-item section-title"><a class="nav-link scrollto" href="#grant-types"><span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>JWK endpoint</a></li>
 					<li class="nav-item section-title"><a class="nav-link scrollto" href="#grant-types"><span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>Configuration</a></li>
@@ -89,7 +89,7 @@
 
 				<article class="docs-article" id="#grant-type-selection">
 					<header class="docs-header">
-						<h1 class="docs-heading">Grant Type Selection</h1>
+						<h1 class="docs-heading">Token</h1>
 						<section class="docs-intro">
 							<p>According to the OAuth2 specification the grant selection for securing an API using OAuth2 can be taken based on the requirements for end user identification, client type (server side web application, native application, client side web application) and the level of trust the resource owner would have on the client application:</p>
 							<br>
